--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <dependency.container>provided</dependency.container>
         <dependency.common>provided</dependency.common>
-
+        <spring-boot.version>1.5.4.RELEASE</spring-boot.version>
         <mapstruct.version>1.1.0.Final</mapstruct.version>
         <java.version>1.8</java.version>
         <encoding.version>UTF-8</encoding.version>
@@ -546,6 +546,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-devtools</artifactId>
+                <version>${spring.boot.version}</version>
                 <!-- optional=true,依赖不会传递，该项目依赖devtools；之后依赖boot项目的项目如果想要使用devtools，需要重新引入 -->
                 <optional>true</optional>
             </dependency>
@@ -628,6 +629,22 @@
                     <encoding>UTF-8</encoding>
                     <compilerArgument>-proc:none</compilerArgument>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+                <dependencies>
+                    <!-- spring热部署-->
+                    <!-- https://mvnrepository.com/artifact/org.springframework/springloaded -->
+                    <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>springloaded</artifactId>
+                        <version>1.2.8.RELEASE</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
