--- a/panoramic-monitor-user-api/pom.xml
+++ b/panoramic-monitor-user-api/pom.xml
@@ -6,11 +6,16 @@
         <artifactId>panoramic-monitor-user</artifactId>
         <groupId>com.it.sunder</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../panoramic-monitor-user/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>panoramic-monitor-user-api</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.it.sunder</groupId>
+            <artifactId>panoramic-monitor-user-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
