--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -571,6 +571,7 @@
         <module>../panoramic-monitor-config-server</module>
         <module>../panoramic-monitor-config-client</module>
         <module>../panoramic-monitor-user</module>
+        <module>../panoramic-monitor-scheduled-task</module>
     </modules>
 
     <build>
