--- a/panoramic-monitor-manage-provider/pom.xml
+++ b/panoramic-monitor-manage-provider/pom.xml
@@ -12,6 +12,11 @@
 
     <groupId>com.it.sunder</groupId>
     <artifactId>panoramic-monitor-manage-provider</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.it.sunder</groupId>
+            <artifactId>panoramic-monitor-manage-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
