--- a/panoramic-monitor-manage-api/pom.xml
+++ b/panoramic-monitor-manage-api/pom.xml
@@ -13,5 +13,11 @@
     <groupId>com.it.sunder</groupId>
     <artifactId>panoramic-monitor-manage-api</artifactId>
 
-
+<dependencies>
+    <dependency>
+        <groupId>com.it.sunder</groupId>
+        <artifactId>panoramic-monitor-manage-dao</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+</dependencies>
 </project>
