--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -537,7 +537,17 @@
                 <version>2.5</version>
             </dependency>
             <!-- javaEE 依赖支持 end-->
-
+            <!-- quartz 模块 -->
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>2.3.0</version>
+            </dependency>
             <!-- 热部署 -->
             <!-- devtools可以实现页面热部署（即页面修改后会立即生效，这个可以直接在application.properties文件中配置spring.thymeleaf.cache=false来实现） -->
             <!-- 实现类文件热部署（类文件修改后不会立即生效），实现对属性文件的热部署。 -->
