--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -584,6 +584,8 @@
         <module>../panoramic-monitor-scheduled-task</module>
         <module>../panoramic-monitor-risk-warning</module>
         <module>../panoramic-monitor-manage</module>
+        <module>../panoramic-monitor-invoke</module>
+        <module>../panoramic-monitor-template</module>
     </modules>
 
     <build>
