--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -576,6 +576,7 @@
 
 	</dependencies>
 	<modules>
+		<module>../panoramic-monitor-common</module>
 		<module>../panoramic-monitor-discovery-eureka</module>
 		<module>../panoramic-monitor-config-server</module>
 		<module>../panoramic-monitor-config-client</module>
@@ -589,7 +590,6 @@
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
-		<pluginManagement>
 			<plugins>
 				<!-- docker的maven插件，官网：https://github.com/spotify/docker-maven-plugin -->
 				<plugin>
@@ -638,20 +638,20 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.2</version>
 				</plugin>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-					<configuration>
-						<fork>true</fork>
-					</configuration>
-					<executions>
-						<execution>
-							<goals>
-								<goal>repackage</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+				<!--<plugin>-->
+					<!--<groupId>org.springframework.boot</groupId>-->
+					<!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+					<!--<configuration>-->
+						<!--<fork>true</fork>-->
+					<!--</configuration>-->
+					<!--<executions>-->
+						<!--<execution>-->
+							<!--<goals>-->
+								<!--<goal>repackage</goal>-->
+							<!--</goals>-->
+						<!--</execution>-->
+					<!--</executions>-->
+				<!--</plugin>-->
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
@@ -670,6 +670,5 @@
 					<!--</dependencies> -->
 				</plugin>
 			</plugins>
-		</pluginManagement>
 	</build>
 </project>
