--- a/panoramic-monitor-common/pom.xml
+++ b/panoramic-monitor-common/pom.xml
@@ -7,9 +7,12 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-
+	<packaging>jar</packaging>
 	<artifactId>panoramic-monitor-common</artifactId>
-
+	<properties>
+		<java.version>1.8</java.version>
+		<encoding.version>UTF-8</encoding.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -173,31 +176,4 @@
 			<artifactId>fastjson</artifactId>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-jar-plugin</artifactId>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-war-plugin</artifactId>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-compiler-plugin</artifactId>-->
-				<!--<configuration>-->
-					<!--<compilerArgument>-parameters</compilerArgument>-->
-					<!--<source>${java.version}</source>-->
-					<!--<target>${java.version}</target>-->
-					<!--<encoding>UTF-8</encoding>-->
-					<!--<compilerArgument>-proc:none</compilerArgument>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 </project>
