--- a/panoramic-monitor-config-server/pom.xml
+++ b/panoramic-monitor-config-server/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>panoramic-monitor-config-server</artifactId>
-
+    <properties>
+        <java.version>1.8</java.version>
+        <encoding.version>UTF-8</encoding.version>
+    </properties>
 
 </project>
