--- a/panoramic-monitor-discovery-eureka/pom.xml
+++ b/panoramic-monitor-discovery-eureka/pom.xml
@@ -10,7 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>panoramic-monitor-discovery-eureka</artifactId>
-
+    <properties>
+        <java.version>1.8</java.version>
+        <encoding.version>UTF-8</encoding.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
