--- a/panoramic-monitor-user/pom.xml
+++ b/panoramic-monitor-user/pom.xml
@@ -12,12 +12,15 @@
     <artifactId>panoramic-monitor-user</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>1.8</java.version>
+        <encoding.version>UTF-8</encoding.version>
+    </properties>
     <modules>
         <module>../panoramic-monitor-user-provider</module>
         <module>../panoramic-monitor-user-api</module>
         <module>../panoramic-monitor-user-service</module>
         <module>../panoramic-monitor-user-dao</module>
-        <module>../panoramic-monitor-common</module>
     </modules>
 
 </project>
