--- a/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
@@ -13,19 +13,13 @@ spring:
     name: panoramic-monitor-manage-provider    # 项目名称尽量用小写
   datasource:                           # 指定数据源
     platform: mysql                # 指定数据源类型
-#    schema: classpath:schema.sql        # 指定数据库的建表脚本
-#    data: classpath:data.sql            # 指定数据库的insert脚本
-
-
-
-
     # 数据库参数  #如果有配置,按照这个配置优先,如果没有按照db.properties配置
 dev:
   spring:
     datasource:
       url: jdbc:mysql://dbserver:3306/panoramic?useUnicode=true&characterEncoding=utf-8
       username: root
-      password: 123
+      password: root
       driverClassName: com.mysql.jdbc.Driver
        # 参数
       initialSize: 5
