--- a/panoramic-monitor-invoke/pom.xml
+++ b/panoramic-monitor-invoke/pom.xml
@@ -16,6 +16,16 @@
         <encoding.version>UTF-8</encoding.version>
     </properties>
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>com.it.sunder</groupId>-->
+            <!--<artifactId>panoramic-monitor-common</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.it.sunder</groupId>
+            <artifactId>panoramic-monitor-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -24,11 +34,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.it.sunder</groupId>-->
-            <!--<artifactId>panoramic-monitor-common</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -65,5 +70,22 @@
             <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
