--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
@@ -25,6 +25,6 @@ security:
 spring:
  devtools:
     restart:
-      additional-paths: 'src/main/java/**'
+      additional-paths: src/main/java
 # 参考文档：http://projects.spring.io/spring-cloud/docs/1.0.3/spring-cloud.html#_standalone_mode
 # 参考文档：http://my.oschina.net/buwei/blog/618756
