--- a/panoramic-monitor-manage-service/pom.xml
+++ b/panoramic-monitor-manage-service/pom.xml
@@ -11,12 +11,30 @@
 
     <groupId>com.it.sunder</groupId>
     <artifactId>panoramic-monitor-manage-service</artifactId>
-<dependencies>
-    <dependency>
-        <groupId>com.it.sunder</groupId>
-        <artifactId>panoramic-monitor-manage-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </dependency>
-</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.it.sunder</groupId>
+            <artifactId>panoramic-monitor-manage-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
