1,修复base认证问题

--- a/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
@@ -1,6 +1,10 @@
 server:
   port: 9000
   servlet-path: /
+security:
+    user:
+        name: root
+        password: password
 eureka:
   client:
     serviceUrl:
