搭建测试接口 优化依赖，完善架构设计

--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -591,10 +591,11 @@
         <module>../panoramic-monitor-config-client</module>
         <module>../panoramic-monitor-user</module>
         <module>../panoramic-monitor-scheduled-task</module>
-        <!--<module>../panoramic-monitor-risk-warning</module>-->
-        <!--<module>../panoramic-monitor-manage</module>-->
+        <module>../panoramic-monitor-risk-warning</module>
+        <module>../panoramic-monitor-manage</module>
         <module>../panoramic-monitor-invoke</module>
-        
+        <module>../panoramic-monitor-doc</module>
+
     </modules>
 
     <build>
