--- a/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 9000
   servlet-path: /
 security:
     user:
@@ -21,7 +21,7 @@ spring:
 dev:
   spring:
     datasource:
-      url: jdbc:mysql://dbserver:3306/panoramic?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://panoramic-test-db:3306/panoramic?useUnicode=true&characterEncoding=utf-8
       username: root
       password: root
       driverClassName: com.mysql.jdbc.Driver
@@ -56,8 +56,8 @@ dev:
 #        restart:
 #            #热部署生效
 #          enabled: true
-#            #设置重启的目录
-#            #additional-paths: src/main/java
-#            #classpath目录下的WEB-INF文件夹内容修改不重启
+##            设置重启的目录
+#            additional-paths: src/main/java
+##            classpath目录下的WEB-INF文件夹内容修改不重启
 #          exclude: WEB-INF/**
 
