原料，产品属性重构。

--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -595,6 +595,7 @@
         <module>../panoramic-monitor-manage</module>
         <module>../panoramic-monitor-invoke</module>
         <module>../panoramic-monitor-doc</module>
+        <module>../panoramic-monitor-gateway-zuul</module>
 
     </modules>
 
