--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
@@ -1,6 +1,12 @@
 server:
-  port: 8761          # 指定该Eureka实例的端口
-
+  port: 8761
+spring:
+  application:
+    name: panoramic-monitor-eureka    # 项目名称尽量用小写
+security:
+  user:
+    name: user
+    password: user
 eureka:
   instance:
     lease-expiration-duration-in-seconds: 30
@@ -15,16 +21,10 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://root:password@${eureka.instance.hostname}:${server.port}/eureka/
-security:
-    basic:
-       enabled: true
-    user:
-       name: root
-       password: password
-spring:
- devtools:
-    restart:
-      additional-paths: src/main/java
+      defaultZone: http://user:user@${eureka.instance.hostname}:${server.port}/eureka/
+#spring:
+# devtools:
+#    restart:
+#      additional-paths: src/main/java
 # 参考文档：http://projects.spring.io/spring-cloud/docs/1.0.3/spring-cloud.html#_standalone_mode
 # 参考文档：http://my.oschina.net/buwei/blog/618756
