--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
@@ -10,7 +10,7 @@ eureka:
     hostname: peer1                               # 指定当profile=peer1时，主机名
   client:
     serviceUrl:
-      defaultZone: http://root:password@peer1:8761/eureka/,http://root:password@peer2:8762/eureka/,http://root:password@peer3:8763/eureka/      # 将自己注册到peer2这个Eureka上面去
+      defaultZone: http://user:user@peer1:8761/eureka/,http://user:user@peer2:8762/eureka/,http://user:user@peer3:8763/eureka/      # 将自己注册到peer2这个Eureka上面去
 
 #      将peer1自己注册到peer2这个Eureka上面去
 #      将peer2自己注册到peer1这个Eureka上面去
