--- a/panoramic-monitor-invoke/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-invoke/src/main/resources/application-dev.yml
@@ -2,13 +2,13 @@ server:
   port: 8000
   servlet-path: /
 security:
-    user:
-        name: root
-        password: password
+  user:
+    name: user
+    password: user
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://root:password@discovery-eureka:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@discovery-eureka:8761/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
