--- a/panoramic-monitor-manage-provider/pom.xml
+++ b/panoramic-monitor-manage-provider/pom.xml
@@ -71,24 +71,12 @@
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 		<!-- log 依赖包 end -->
-		<!-- quartz 模块 -->
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz-jobs</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
-		</dependency>
+		<!-- devtools 会导致通过mapper在反射时找不到实体类对应表 -->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-devtools</artifactId>-->
+			<!--<optional>true</optional> &lt;!&ndash; 这个需要为 true 热部署才有效 &ndash;&gt;-->
+		<!--</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
