--- a/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
@@ -2,19 +2,19 @@ server:
   port: 9000
   servlet-path: /
 security:
-    user:
-        name: root
-        password: password
+  user:
+    name: user
+    password: user
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://root:password@discovery-eureka:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@discovery-eureka:8761/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
 spring:
   application:
-    name: panoramic-monitor-manage-provider    # 项目名称尽量用小写
+    name: panoramic-monitor-manage    # 项目名称尽量用小写
   datasource:                           # 指定数据源
     platform: mysql                # 指定数据源类型
     # 数据库参数  #如果有配置,按照这个配置优先,如果没有按照db.properties配置
@@ -40,6 +40,7 @@ dev:
       maxPoolPreparedStatementPerConnectionSize: 20
       filters: stat,wall,log4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
 # 日志配置
 #logging:
 #  level:
