--- a/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
@@ -1,10 +1,14 @@
 server:
   port: 6000
   servlet-path: /
+security:
+  user:
+    name: user
+    password: user
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://root:password@discovery-eureka:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@discovery-eureka:8761/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
@@ -50,6 +54,7 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.itmuch.youran.persistence: ERROR
+
 
 # 热发布插件
 
