--- a/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
@@ -2,19 +2,19 @@ server:
   port: 9000
   servlet-path: /
 security:
-    user:
-        name: root
-        password: password
+  user:
+    name: user
+    password: user
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://root:password@discovery-eureka:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@discovery-eureka:8761/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
 spring:
   application:
-    name: panoramic-monitor-user-provider    # 项目名称尽量用小写
+    name: panoramic-monitor-user    # 项目名称尽量用小写
   datasource:                           # 指定数据源
     platform: mysql                # 指定数据源类型
 #    schema: classpath:schema.sql        # 指定数据库的建表脚本
