1,添加注释，优化代码规范

--- a/panoramic-monitor-manage-provider/src/main/resources/application-test.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 server:
   port: 9000
   servlet-path: /
-quartzConfig: dev-quartz.properties
+quartzConfig: quartz.properties
 security:
   user:
     name: user
