1,添加注释，优化代码规范 2,每日库存统计

--- a/panoramic-monitor-manage-provider/src/main/resources/dev-quartz.properties
+++ b/panoramic-monitor-manage-provider/src/main/resources/dev-quartz.properties
@@ -35,7 +35,7 @@ org.quartz.jobStore.isClustered = true
 # Configure Datasources
 #============================================================================
 org.quartz.dataSource.dev-schedule.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.dev-schedule.URL:jdbc:mysql://panoramic.neweplatform.com:3306/dev-schedule
+org.quartz.dataSource.dev-schedule.URL:jdbc:mysql://test.neweplatform.com:3306/dev-schedule
 org.quartz.dataSource.dev-schedule.user:root
 org.quartz.dataSource.dev-schedule.password:root
 org.quartz.dataSource.dev-schedule.maxConnections:10
