--- a/panoramic-monitor-manage-provider/src/main/resources/dev-quartz.properties
+++ b/panoramic-monitor-manage-provider/src/main/resources/dev-quartz.properties
@@ -28,14 +28,14 @@ org.quartz.jobStore.class:org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass:org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties:true
 org.quartz.jobStore.tablePrefix:qrtz_
-org.quartz.jobStore.dataSource:dev-schedule
+org.quartz.jobStore.dataSource:scheduled-task
 org.quartz.jobStore.isClustered = true
  
 #============================================================================
 # Configure Datasources
 #============================================================================
-org.quartz.dataSource.dev-schedule.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.dev-schedule.URL:jdbc:mysql://test.neweplatform.com:3306/dev-schedule
-org.quartz.dataSource.dev-schedule.user:root
-org.quartz.dataSource.dev-schedule.password:root
-org.quartz.dataSource.dev-schedule.maxConnections:10
+org.quartz.dataSource.scheduled-task.driver:com.mysql.jdbc.Driver
+org.quartz.dataSource.scheduled-task.URL:jdbc:mysql://test.neweplatform.com:3306/scheduled-task
+org.quartz.dataSource.scheduled-task.user:root
+org.quartz.dataSource.scheduled-task.password:root
+org.quartz.dataSource.scheduled-task.maxConnections:10
