1,添加注释，优化代码规范

--- a/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
@@ -30,7 +30,7 @@ zuul:
       serviceId: monitor-scheduled-task
       sensitive-headers: Cookie,Set-Cookie
     risks:
-      path: /risk/warning/**
+      path: /risk-warning/**
       serviceId: monitor-risk-warning
       sensitive-headers: Cookie,Set-Cookie
 eureka:
