--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
@@ -1,17 +1,29 @@
 spring:
   profiles: peer1                                 # 指定profile=peer1
-#  devtools:
-#    restart:
-#      additional-paths: src/main/java,src/main/resources
 server:
   port: 8761
+spring:
+  application:
+    name: panoramic-monitor-eureka    # 项目名称尽量用小写
+security:
+  user:
+    name: user
+    password: user
 eureka:
   instance:
-    hostname: peer1                               # 指定当profile=peer1时，主机名
+    lease-expiration-duration-in-seconds: 30
+    lease-renewal-interval-in-seconds: 10
+    hostname: discovery    # 指定该Eureka实例的主机名
+  server:
+    enable-self-preservation: false			# 设为false，关闭自我保护
+    eviction-interval-timer-in-ms: 4000    # 清理间隔（单位毫秒，默认是60*1000）
   client:
+    healthcheck:
+          enabled: true
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:user@peer1:8761/eureka/,http://user:user@peer2:8762/eureka/,http://user:user@peer3:8763/eureka/      # 将自己注册到peer2这个Eureka上面去
-
+      defaultZone: http://user:user@${eureka.instance.hostname}:${server.port}/eureka/                           # 指定当profile=peer1时，主机名
 #      将peer1自己注册到peer2这个Eureka上面去
 #      将peer2自己注册到peer1这个Eureka上面去
 
