1,添加注释，优化代码规范

--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
@@ -18,10 +18,10 @@ eureka:
   client:
     healthcheck:
           enabled: true
-    registerWithEureka: false
+    registerWithEureka: true
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:user@${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://user:user@${eureka.instance.hostname}:8761/eureka/,http://user:user@${eureka.instance.hostname}:8762/eureka/
 #spring:
 # devtools:
 #    restart:
