--- a/panoramic-monitor-scheduled-task/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-scheduled-task/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ ribbon:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@test.neweplatform.com:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@test.neweplatform.com:8761/eureka/,http://user:user@test.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
