1,添加注释，优化代码规范

--- a/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
@@ -22,7 +22,7 @@ zuul:
       serviceId: monitor-invoke
       sensitive-headers: Cookie,Set-Cookie
     users:
-      path: /user/**
+      path: /users/**
       serviceId: monitor-user
       sensitive-headers: Cookie,Set-Cookie
     tasks:
