--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-dev-01.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 spring:
   application:
-    name: panoramic-monitor-eureka    # 项目名称尽量用小写
+    name: monitor-eureka    # 项目名称尽量用小写
 security:
   user:
     name: user
@@ -18,7 +18,7 @@ eureka:
   client:
     healthcheck:
           enabled: true
-    registerWithEureka: true
+    registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://user:user@${eureka.instance.hostname}:8761/eureka/,http://user:user@${eureka.instance.hostname}:8762/eureka/
