--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-peer1.yml
@@ -4,7 +4,7 @@ server:
   port: 8761
 spring:
   application:
-    name: panoramic-monitor-eureka    # 项目名称尽量用小写
+    name: monitor-eureka    # 项目名称尽量用小写
 security:
   user:
     name: user
