1,添加注释，优化代码规范 2,添加生产配置

--- a/panoramic-monitor-scheduled-task/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-scheduled-task/src/main/resources/application-pro.yml
@@ -7,7 +7,7 @@ security:
     name: user
     password: user
 
-quartzConfig: quartz-dev.properties
+quartzConfig: quartz.properties
 feign:  # 必须配置开启断路器,默认false
    hystrix:
      enabled: true
