1,添加注释，优化代码规范 2,优化第一次请求超时问题

--- a/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
+++ b/panoramic-monitor-gateway-zuul/src/main/resources/application-dev-01.yml
@@ -11,7 +11,12 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 300000
 ribbon:
     ConnectTimeout: 60000
     ReadTimeout: 120000
+    eager-load:
+      enabled: true
 zuul:
+  ribbon:
+    eager-load:
+      enabled: true
   routes:
     manages:
       path: /manage/**
