预警模块-代码优化 预警模块自动接触报警开发完成

--- a/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
@@ -57,6 +57,13 @@ logging:
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.itmuch.youran.persistence: ERROR
 
+Email:
+  Config:
+    host: smtp.qq.com
+    address: slayersfox@vip.qq.com
+    password: vpmjwahcoqmlbgjg
+    needSSL : true
+    
 
 # 热发布插件
 
